# seulex

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  TESTING.md  c99.yy.c
design/: acceptance_report.md  dfa_minimization_design.md  fix_report.md  nfa_design.md  nfa_to_dfa_design.md  scanner_generator_fix_report.md
scripts/: coverage_by_module.py
src/: main.cpp  types.h
src/automata/: dfa_matcher.cpp  dfa_matcher.h  dfa_minimizer.cpp  dfa_minimizer.h  nfa_builder.cpp  nfa_builder.h  nfa_visualizer.cpp  nfa_visualizer.h  subset_construction.cpp  subset_construction.h
src/codegen/: scanner_generator.cpp  scanner_generator.h
src/config/: config.cpp  config.h
src/diagnostic/: diagnostic.h
src/parser/: flex_regex_converter.cpp  flex_regex_converter.h  lex_input_scanner.cpp  lex_input_scanner.h  regex_parser.cpp  regex_parser.h
test/: c99.l  c99.y  regression_codegen.sh
test_inputs/: dfa_minimizer_demo.l  sample_input.txt  seuparser  simple1.l  simple2.l  simple3.l
test_outputs/: c99.tab.c  c99.yy.c  nfa_validation_report.md  simple1.mmd  simple2.mmd  simple3.mmd  y.tab.c  y.tab.h
tests/: automata_pipeline_test.cpp  config_test.cpp  flex_regex_converter_test.cpp  regex_parser_test.cpp  scanner_generator_test.cpp
tests/e2e/: run_bison_integration.sh  run_generate_simple.sh
usecase/usecase1/: Makefile  lex.yy.c  test1-flex  test1-seulex  test1.l  test1.txt  test1.yy.c
usecase/usecase2/: Makefile  lex.yy.c  test2-flex  test2-seulex  test2.l  test2.yy.c
usecase/usecase3/: Makefile  lex.yy.c  test3-flex  test3-seulex  test3.l  test3.txt  test3.yy.c
usecase/usecase4/: c99.l  c99.tab.c  c99.yy.c  c99parser  test.c
usecase/usecase5/: Makefile  cal  cal.l  cal.tab.c  cal.yy.c
